--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -413,9 +413,17 @@
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sVI-Of-SYi" customClass="PPSSignatureView">
                                 <rect key="frame" x="16" y="438" width="568" height="96"/>
+                                <subviews>
+                                    <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="bBT-KQ-o4v">
+                                        <rect key="frame" x="266" y="29" width="37" height="37"/>
+                                        <color key="color" red="0.42745098040000001" green="0.74509803919999995" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                    </activityIndicatorView>
+                                </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="bBT-KQ-o4v" secondAttribute="centerX" id="7nR-Tp-BSf"/>
                                     <constraint firstAttribute="width" constant="250" id="GGx-cN-Bpb"/>
+                                    <constraint firstAttribute="centerY" secondItem="bBT-KQ-o4v" secondAttribute="centerY" id="tmS-11-hh7"/>
                                     <constraint firstAttribute="height" constant="96" id="vcV-ug-IQc"/>
                                 </constraints>
                                 <variation key="default">
@@ -457,6 +465,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="activityIndicator" destination="bBT-KQ-o4v" id="uTg-2l-Q3F"/>
                         <outlet property="signatureView" destination="sVI-Of-SYi" id="aay-vn-ijc"/>
                     </connections>
                 </viewController>
