Initial migration to tableview.

--- a/WeCrowd/Base.lproj/PaymentFlow.storyboard
+++ b/WeCrowd/Base.lproj/PaymentFlow.storyboard
@@ -695,6 +695,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="AnY-YM-pUf"/>
+        <segue reference="UKU-nX-JcC"/>
     </inferredMetricsTieBreakers>
 </document>
